--- a/estilo/style.css
+++ b/estilo/style.css
@@ -64,7 +64,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 0px black;
-    margin-bottom: 20px;
+    padding-bottom: 30px;
 }
 
 a.externo::after {
