--- a/estilo/style.css
+++ b/estilo/style.css
@@ -43,6 +43,7 @@ body {
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     padding-top: 50px;
+    padding-bottom: 50px;
     height: 150px;
     text-align: center;
 }
