--- a/estilo/style.css
+++ b/estilo/style.css
@@ -43,7 +43,6 @@ body {
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     padding-top: 50px;
-    padding-bottom: 50px;
     height: 150px;
     text-align: center;
 }
@@ -65,7 +64,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 0px black;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 
 a.externo::after {
@@ -74,7 +73,7 @@ a.externo::after {
 
 nav {
     background-color: var(--cor5);
-    padding: 10px;
+    padding: 50px 10px 10px 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.195);
 }
 
