--- a/estilo/style.css
+++ b/estilo/style.css
@@ -51,7 +51,7 @@ header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-shadow: 2px 2px 0px black;
 }
 
@@ -64,7 +64,6 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 0px black;
-    padding-bottom: 30px;
 }
 
 a.externo::after {
@@ -73,7 +72,7 @@ a.externo::after {
 
 nav {
     background-color: var(--cor5);
-    padding: 50px 10px 10px 10px;
+    padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.195);
 }
 
