--- a/estilo/style.css
+++ b/estilo/style.css
@@ -62,6 +62,7 @@ header > p {
     max-width: 600px;
     margin: auto;
     padding-right: 10px;
+    padding-bottom: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 0px black;
 }
